default/objects/NVMConnect__ActiveDialEntry__c/NVMConnect__ActiveDialEntry__c.object-meta.xml
<CustomObject>
    <label>Active Dial Entry</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Active Dial Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>