default/objects/NVMConnect__ActiveDialEntry__c/fields/NVMConnect__Dial_List__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__Dial_List__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dial List</label>
    <referenceTo>NVMConnect__DialList__c</referenceTo>
    <relationshipName>ActiveDialEntries</relationshipName>
    <type>Lookup</type>
</CustomField>