default/objects/NVMConnect__ActiveDialEntry__c/fields/NVMConnect__Focus_Object_Id__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__Focus_Object_Id__c</fullName>
    <description>Id of the object to pop and store activity records against if it is in Salesforce</description>
    <label>Focus Object Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>