default/objects/NVMConnect__ActiveDialEntry__c/fields/NVMConnect__OrderField1__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__OrderField1__c</fullName>
    <description>First order field populated from the focus object</description>
    <label>First order field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>