default/objects/NVMConnect__ActiveDialEntry__c/fields/NVMConnect__OrderField3__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__OrderField3__c</fullName>
    <description>Third order field populated from the focus object</description>
    <label>Third order field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>