default/objects/NVMConnect__ActiveDialEntry__c/fields/NVMConnect__ProcessedDialEntry__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__ProcessedDialEntry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Processed Dial Entry</label>
    <referenceTo>NVMConnect__ProcessedDialEntry__c</referenceTo>
    <relationshipName>ProcessedDialEntries</relationshipName>
    <type>Lookup</type>
</CustomField>