default/objects/NVMConnect__ActiveDialEntry__c/fields/NVMConnect__Secondary_Phone__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__Secondary_Phone__c</fullName>
    <description>Number to dial if unable to connect via primary phone number.  Not mandatory, unlike primary number.</description>
    <label>Secondary Phone</label>
    <type>Phone</type>
</CustomField>